# sentrix

./: .gitignore  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh  package-lock.json  package.json
.github/workflows/: ci-rust.yml  ci.yml  release-cli.yml  release.yml
cli/: Cargo.toml  build.rs
cli/src/: detect_lang.rs  logger.rs  main.rs
cli/src/commands/: create.rs  discover.rs  init.rs  inspect.rs  run.rs  scaffold.rs  test.rs  upgrade.rs  version.rs
docs/: anr.md  differentiation.md  discovery.md  identity.md  interfaces.md  libp2p.md  mcp.md  overview.md  plugins.md  version-management.md  vs-a2a.md  x402.md
docs/examples/: 01-hello-agent.md  02-agent-discovery.md  03-agent-to-agent.md  04-multi-agent-workflow.md  05-cross-framework.md
examples/cross-framework/: README.md  research_agent.py  run.py  writer_agent.py
npm/: package.json
npm/borgkit-cli/: package.json
npm/borgkit-cli-darwin-arm64/: package.json
npm/borgkit-cli-darwin-x64/: package.json
npm/borgkit-cli-linux-arm64/: package.json
npm/borgkit-cli-linux-x64/: package.json
npm/borgkit-cli-win32-x64/: package.json
npm/inai-cli/: package.json
npm/inai-cli-darwin-arm64/: package.json
npm/inai-cli-darwin-x64/: package.json
npm/inai-cli-linux-arm64/: package.json
npm/inai-cli-linux-x64/: package.json
npm/inai-cli-win32-x64/: package.json
npm/sentrix-cli/: package.json
npm/sentrix-cli-darwin-arm64/: package.json
npm/sentrix-cli-darwin-x64/: package.json
npm/sentrix-cli-linux-arm64/: package.json
npm/sentrix-cli-linux-x64/: package.json
npm/sentrix-cli-win32-x64/: package.json
scripts/: sync-release-versions.cjs
src/: cli.ts  version.ts
src/commands/: create.ts  discover.ts  init.ts  inspect.ts  run.ts  test.ts  version.ts
src/utils/: detect-lang.ts  generator.ts
templates/python/: requirements.txt  server.py
templates/python/adapters/: mcp_server.py
templates/python/addons/: __init__.py
templates/python/anr/: anr.py
templates/rust/: Cargo.toml.tpl
templates/typescript/: didcomm.ts  package.json.tpl  server.ts
templates/zig/: build.zig
transport/rust/: Cargo.toml  build.rs  cbindgen.toml
transport/rust/include/: sentrix_libp2p.h
transport/rust/src/: ffi.rs  gossip.rs  invoke.rs  lib.rs  node.rs
(+114 files in other folders)
