[package]
name    = "borgkit-libp2p"
version = "0.1.0"
edition = "2021"
description = "libp2p transport for the Borgkit agent mesh — exposes C FFI for Python and Zig"

[lib]
name      = "borgkit_libp2p"
crate-type = ["cdylib", "rlib"]

[dependencies]
libp2p = { version = "0.54", features = [
  "tcp", "noise", "yamux", "gossipsub",
  "identify", "request-response", "tokio",
  "macros",
] }
tokio          = { version = "1", features = ["full"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
async-trait    = "0.1"
futures        = "0.3"
bytes          = "1"
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell      = "1"

[build-dependencies]
cbindgen = "0.26"
